# simplicity-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Simplex.toml
crates/cli/: .env.example  Cargo.toml  README.md
crates/cli/assets/: example-run.md
crates/cli/src/: explorer.rs  lib.rs  main.rs
crates/cli/src/commands/: basic.rs  dcd.rs  mod.rs  option_offer.rs  options.rs  smt_storage.rs  storage.rs
crates/cli/src/modules/: keys.rs  paths.rs  settings.rs  store.rs  utils.rs
crates/contracts/: .gitignore  Cargo.toml  README.md
crates/contracts-adapter/: Cargo.toml  README.md
crates/contracts-adapter/src/: lib.rs
crates/contracts-adapter/src/contract_interaction/: basic.rs  dcd.rs  mod.rs  options.rs  storage.rs
crates/contracts-adapter/src/contract_interaction/dcd/: common.rs  context.rs  init.rs  mod.rs  types.rs
crates/contracts/proptest-regressions/state_management/bytes32_tr_storage/: mod.txt
crates/contracts/simf/: bytes32_tr_storage.simf  option_offer.simf  options.simf  smt_storage.simf
crates/contracts/src/: arguments_helpers.rs  error.rs  lib.rs  test_setup.rs
crates/contracts/src/array_tr_storage/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/artifacts/: array_tr_storage.rs  bytes32_tr_storage.rs  failure_test.rs  mod.rs  option_offer.rs  options.rs  smt_storage.rs
crates/contracts/src/artifacts/simf/: option_offer.simf  options.simf
crates/contracts/src/bytes32_tr_storage/: mod.rs
crates/contracts/src/bytes32_tr_storage/source_simf/: bytes32_tr_storage.simf
crates/contracts/src/cmr_storage/: mod.rs
crates/contracts/src/dual_currency_deposit/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/dual_currency_deposit/source_simf/: dual_currency_deposit.simf
crates/contracts/src/finance/: mod.rs
crates/contracts/src/finance/dcd/: build_arguments.rs  mod.rs
crates/contracts/src/finance/option_offer/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/finance/options/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/option_offer/: mod.rs
crates/contracts/src/options/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/options/source_simf/: options.simf
crates/contracts/src/programs/: mod.rs  option_offer.rs  options.rs  program.rs
crates/contracts/src/programs/bitcoin_message_ecdsa_verify/: build_witness.rs  mod.rs
crates/contracts/src/sdk/: mod.rs  partial_pset.rs  signer.rs  taproot_pubkey_gen.rs  validation.rs
crates/contracts/src/sdk/basic/: issue_asset.rs  mod.rs  reissue_asset.rs  split_native_any.rs  transfer_asset.rs  transfer_native.rs
crates/contracts/src/sdk/finalization/: mod.rs  partial_pset.rs  signer.rs
crates/contracts/src/sdk/finance/: mod.rs
crates/contracts/src/sdk/issuance_validation/: mod.rs
crates/contracts/src/sdk/option_offer/: deposit.rs  exercise.rs  expiry.rs  mod.rs  withdraw.rs
crates/contracts/src/sdk/options/: cancellation_option.rs  creation_option.rs  exercise_option.rs  expiry_option.rs  funding_option.rs  mod.rs  settlement_option.rs
crates/contracts/src/sdk/storage/: get_storage_address.rs  mod.rs  (+1 more)
crates/contracts/src/sig_verification/: mod.rs
crates/contracts/src/simple_storage/: README.md  build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/simplicityhl_core/: error.rs  mod.rs  runner.rs  scripts.rs
crates/contracts/src/smt_storage/: build_witness.rs  mod.rs  smt.rs
crates/contracts/src/sphincs/: mod.rs
crates/contracts/src/state_management/: mod.rs
crates/contracts/src/swap_with_change/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/utils/: arguments_helpers.rs  mod.rs  test_setup.rs
crates/contracts/tests/: failure_test.rs  mod.rs
crates/contracts/tests/common/: filters.rs  issuance.rs  mod.rs  signer.rs
crates/contracts/tests/failure_test/: core.rs  mod.rs  possible_impl.rs  possible_impl_2.rs  possible_interface.rs  possible_interface_2.rs  prop_test.proptest-regressions  prop_test.rs
crates/contracts/tests/program_builder/: option_offer.rs  options.rs
crates/contracts/tests/regtest/: bitcoin_message_ecdsa_verify.rs  mod.rs
crates/simplicityhl-core/: Cargo.toml  README.md
crates/simplicityhl-core/src/: blinder.rs  constants.rs  error.rs  explorer.rs  lib.rs  runner.rs  scripts.rs  signer.rs  taproot_pubkey_gen.rs  tx_inclusion.rs  types.rs
crates/simplicityhl-core/src/trackers/: debug_tracker.rs  default_tracker.rs  mod.rs
crates/wallet-abi/: Cargo.toml
crates/wallet-abi-bindings/: Cargo.toml  README.md  uniffi.kotlin-multiplatform.toml  uniffi.toml
crates/wallet-abi-bindings/android_bindings/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
crates/wallet-abi-bindings/android_bindings/lib/: build.gradle.kts  consumer-rules.pro
crates/wallet-abi-bindings/src/: error.rs  lib.rs  runtime.rs
crates/wallet-abi-qrgen/: Cargo.toml  README.md
crates/wallet-abi-qrgen/src/: cli.rs  lib.rs  main.rs  option_offer.rs  qr.rs  relay_connect.rs  request.rs  transport.rs
crates/wallet-abi-qrgen/tests/: cli.rs
crates/wallet-abi-regtest-harness/: Cargo.toml
crates/wallet-abi-regtest-harness/src/: handler.rs  main.rs  nodes.rs  protocol.rs  wallet.rs
crates/wallet-abi-relayer/: Cargo.toml  README.md
crates/wallet-abi-relayer/src/: config.rs  crypto.rs  http.rs  main.rs  state_machine.rs  store.rs  ws.rs
crates/wallet-abi-relayer/src/migrations/: 0001_init.sql
crates/wallet-abi-transport/: Cargo.toml  README.md
crates/wallet-abi-transport/src/: lib.rs  wa_relay.rs  wa_transport.rs
crates/wallet-abi/src/: encoding.rs  error.rs  lib.rs  scripts.rs  taproot_pubkey_gen.rs  tx_inclusion.rs
crates/wallet-abi/src/issuance_validation/: mod.rs
crates/wallet-abi/src/runtime/: input_resolution.rs  mod.rs  output_resolution.rs  params.rs  utils.rs
crates/wallet-abi/src/schema/: bundle.rs  expression.rs  mod.rs  runtime_params.rs  tx_create.rs  types.rs  values.rs
crates/wallet-abi/src/simplicity/: p2pk.rs
crates/wallet-abi/src/source_simf/: p2pk.wallet.schema.json
(+97 files in other folders)
