[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/contracts",
    "crates/wallet-abi",
    "crates/wallet-abi-bindings",
    "crates/wallet-abi-transport",
    "crates/wallet-abi-relayer",
    "crates/wallet-abi-regtest-harness",
    "crates/wallet-abi-qrgen",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
ring = "0.17.14"
sha2 = { version = "0.10.9", features = ["compress"] }

hex = "0.4.3"
tracing = { version = "0.1.41" }

minreq = { version = "2.14.1", features = ["https", "json-using-serde"]}

simplicityhl = { version = "0.4.0" }

[patch.crates-io]
simplicity-sys = { path = "../rust-simplicity/simplicity-sys" }
lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_common" }
lwk_signer = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_signer" }
lwk_simplicity = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_simplicity" }
lwk_wollet = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_wollet" }
