[workspace]
resolver = "3"
members = [
    "crates/contracts",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
serde = "1"
serde_json = "1"

tracing = { version = "0.1.41" }

minreq = { version = "2.14.1", features = ["https", "json-using-serde"]}

smplx-std = { path = "/Users/ikripaka/Documents/Work_dl/simplex_another_branch/crates/simplex" }

lwk_common = "0.17.0"