[package]
name = "cli"
version = "0.1.0"
edition = "2024"
description = "Simplicity helper CLI for Liquid testnet"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "simplicity-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
dotenvy = "0.15.7"

sled = "0.34.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }

hex = { workspace = true }

wallet-abi = { path = "../wallet-abi" }
contracts = { path = "../contracts" }

simplicityhl = { workspace = true }

lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_common", default-features = false }

[dev-dependencies]
bitcoincore-rpc = "0.19.0"
lwk_test_util = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_test_util" }
serde_json = "1"
