[package]
name = "contracts"
version = "0.1.0"
edition = "2024"
description = "Simplicity contract templates and helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/simplicity-contracts"
readme = "README.md"
keywords = ["simplicity", "liquid", "bitcoin", "elements", "contracts"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["finance-options", "finance-option-offer", "simple-storage", "bytes32-tr-storage", "array-tr-storage", "smt-storage"]
finance-options = []
finance-option-offer = []
simple-storage = []
bytes32-tr-storage = []
array-tr-storage = []
smt-storage = []

[lints]
workspace = true

[dependencies]
bincode = "2.0.1"

thiserror = "2"

hex = { workspace = true }

simplicityhl = { workspace = true }
wallet-abi = { path = "../wallet-abi" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
bitcoincore-rpc = "0.19.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_common" }
lwk_test_util = { git = "https://github.com/Blockstream/lwk", rev = "4074c527fcc1268eb26953af397eecc6c1444293", package = "lwk_test_util" }
libc = "0.2"
