[package]
name = "contracts"
version = "0.1.0"
edition = "2024"
description = "Simplicity contract templates and helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/simplicity-contracts"
readme = "README.md"
keywords = ["simplicity", "liquid", "bitcoin", "elements", "contracts"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["simple-storage", "bytes32-tr-storage", "array-tr-storage", "smt-storage"]
simple-storage = []
bytes32-tr-storage = []
array-tr-storage = []
smt-storage = []

[lints]
workspace = true

[dependencies]
thiserror = "2"

proptest = { version = "1.11.0" }
rand = { version = "0.10.1" }

serde = { workspace = true }
serde_json = { workspace = true }

smplx-std = { workspace = true }

lwk_common = { workspace = true }

[dev-dependencies]
anyhow = "1"