[package]
name = "wallet-abi-qrgen"
version = "0.1.0"
edition = "2024"
description = "Generate wallet-abi transport QR codes for common request testing flows"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

[[bin]]
name = "wallet-abi-qrgen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
qr_code = { version = "2.0.0", features = ["bmp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "std"] }
zstd = "0.13"
contracts = { path = "../contracts" }
wallet-abi = { path = "../wallet-abi" }
wallet-abi-transport = { path = "../wallet-abi-transport" }
simplicityhl = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
