[package]
name = "wallet-abi-relayer"
version = "0.1.0"
edition = "2024"
description = "Wallet ABI websocket relayer"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "wallet-abi-relayer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
futures-util = "0.3"
ring = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
wallet-abi-transport = { path = "../wallet-abi-transport" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio-tungstenite = "0.24"
