[package]
name = "wallet-abi-transport"
version = "0.1.0"
edition = "2024"
description = "Shared wallet-abi transport and relay protocol primitives"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ring = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
wallet-abi = { path = "../wallet-abi" }
zstd = "0.13"

[dev-dependencies]
hex = { workspace = true }
